--- a/react-app/package.json
+++ b/react-app/package.json
@@ -17,7 +17,8 @@
     "start": "react-app-env start",
     "build": "react-app-env build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
